--- a/EBoutique_API/boutique/templates/boutique/accueil.html
+++ b/EBoutique_API/boutique/templates/boutique/accueil.html
@@ -31,6 +31,9 @@
         <a href="{% url 'boutique:tableau_bord' %}" class="btn btn-success">
             <i class="fas fa-tachometer-alt"></i> Tableau de bord
         </a>
+        <a
+            href="{% url 'map_produits' %}">🗺️ Voir la carte des boutiques
+        </a>
     </div>
 </div>
 {% endblock %}
