update readme file

--- a/EBoutique_API/boutique/templates/boutique/map.html
+++ b/EBoutique_API/boutique/templates/boutique/map.html
@@ -105,7 +105,7 @@
                                 Modèle : ${boutique.modele}<br>
                                 Prix : ${boutique.prix} €<br>
                                 Quantité : ${boutique.quantite}<br>
-                                Distance : ${boutique.distance_km} km
+                                Distance : ${boutique.location.distance(userCoords)} m
                             </div>
                         `;
 
